--- a/Interpreting_Pvalues/report_v2/GWAS-Pvalues.Rmd
+++ b/Interpreting_Pvalues/report_v2/GWAS-Pvalues.Rmd
@@ -64,7 +64,11 @@ In this case, the corresponding non-centrality parameter of testing $\beta_2=0$ 
 Since $g^{-1}(\eta)= \frac{\exp(\eta)}{1+\exp(\eta)}$ for logistic regression, we can compute the i-th term of the diagonal matrix $W_\beta$ as $$[W_\beta]_{ii} = f(\eta_i)=\frac{\exp(-\eta_i)}{(1+\exp(-\eta_i))^2}.$$
 The function $f(.)$ represents the density function of standard logistic distribution, and the term $\eta_i$ is the i-th linear predictor. This implies the non-centrality parameter, hence the power will depend on every parameter in the model, not just on the parameter of interest $\beta_2$. 
 
-An important consequence of this phenomenon is that, the magnitude of p values (statistical significance) will not reflect the magnitude of the SNP effects (pratical significance), even if the two studies are carried out using one common dataset. For example, if a SNP has effect $\beta_G$ on both traits, it may show significance on only one trait because of the difference in the covariate effect such as gender or race.
+To better understand the influence of $\beta_1$ on power of the Wald test for $\beta_2$. Note that $$\sigma_\eta^2:=\Var(\eta_i) = \beta_1^2\sigma_1^2+\beta_2^2\sigma_2^2 \propto c +\beta_1^2,$$ where we use $c$ to denote a constant term that does not depend on $\beta_1$. Assume that the matrix $X^TX \approx \Sigma_X$, and $\eta_i\sim N(0,\sigma_\eta^2)$ (with density $\phi_\eta$), where $\Sigma_X$ is a matrix that does not depend on $\beta_1$. We will use the following approximation to the fisher information matrix:$$I = X^TW_\beta X \approx \mu_w \Sigma_X,$$ where $\mu_w = \E(w_i)$. Hence, we know that $$I^{-1}_{[2,2]} \propto \frac{1}{\mu_w}.$$
+
+To compute $\mu_w$, we can approximate the standard logistic density $f(.)$ with density of $N(0,\frac{\pi^2}{3})$ (denoted by $\phi_1$). Therefore, we have $$\mu_w = E(f(\eta_i)) \approx \int\phi_1(x)\phi_{\eta}(x)dx = \frac{1}{\sqrt{2\pi(\sigma_\eta^2+\frac{\pi^2}{3})}} \propto \frac{1}{c+|\beta_1|}.$$ Hence $I^{-1}_{[2,2]} \propto c+|\beta_1|$, which means that we expect the power of testing $\beta_2$ decreases as $|\beta_1|$ grows.
+
+An important consequence of this phenomenon is that, the magnitude of p values (statistical significance) will not reflect the magnitude of the SNP effects (practical significance), even if the two studies are carried out using one common dataset. For example, if a SNP has effect $\beta_G$ on both traits, it may show significance on only one trait because of the difference in the covariate effect such as gender or race.
 
 
 # Simulation with Gaussian linear regression model:
