--- a/Interpreting_Pvalues/report_v2/GWAS-Pvalues.tex
+++ b/Interpreting_Pvalues/report_v2/GWAS-Pvalues.tex
@@ -273,10 +273,29 @@ predictor. This implies the non-centrality parameter, hence the power
 will depend on every parameter in the model, not just on the parameter
 of interest \(\beta_2\).
 
+To better understand the influence of \(\beta_1\) on power of the Wald
+test for \(\beta_2\). Note that
+\[\sigma_\eta^2:=\text{Var}(\eta_i) = \beta_1^2\sigma_1^2+\beta_2^2\sigma_2^2 \propto c +\beta_1^2,\]
+where we use \(c\) to denote a constant term that does not depend on
+\(\beta_1\). Assume that the matrix \(X^TX \approx \Sigma_X\), and
+\(\eta_i\sim N(0,\sigma_\eta^2)\) (with density \(\phi_\eta\)), where
+\(\Sigma_X\) is a matrix that does not depend on \(\beta_1\). We will
+use the following approximation to the fisher information
+matrix:\[I = X^TW_\beta X \approx \mu_w \Sigma_X,\] where
+\(\mu_w = \mathbb{E}(w_i)\). Hence, we know that
+\[I^{-1}_{[2,2]} \propto \frac{1}{\mu_w}.\]
+
+To compute \(\mu_w\), we can approximate the standard logistic density
+\(f(.)\) with density of \(N(0,\frac{\pi^2}{3})\) (denoted by
+\(\phi_1\)). Therefore, we have
+\[\mu_w = E(f(\eta_i)) \approx \int\phi_1(x)\phi_{\eta}(x)dx = \frac{1}{\sqrt{2\pi(\sigma_\eta^2+\frac{\pi^2}{3})}} \propto \frac{1}{c+|\beta_1|}.\]
+Hence \(I^{-1}_{[2,2]} \propto c+|\beta_1|\), which means that we expect
+the power of testing \(\beta_2\) decreases as \(|\beta_1|\) grows.
+
 An important consequence of this phenomenon is that, the magnitude of p
 values (statistical significance) will not reflect the magnitude of the
-SNP effects (pratical significance), even if the two studies are carried
-out using one common dataset. For example, if a SNP has effect
+SNP effects (practical significance), even if the two studies are
+carried out using one common dataset. For example, if a SNP has effect
 \(\beta_G\) on both traits, it may show significance on only one trait
 because of the difference in the covariate effect such as gender or
 race.
