--- a/Interpreting_Pvalues/report_v3/GWAS-Pvalues.Rmd
+++ b/Interpreting_Pvalues/report_v3/GWAS-Pvalues.Rmd
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(echo = TRUE, dev = 'png', message = F, warning = F)
 
 For most human traits, genetic effects from specific SNP only have small effect sizes [@meta2]. Therefore, practitioners often aggregate the GWAS results from different studies through meta-analysis or mega-analysis in order to achieve higher power. Aggregation through p-values is a commonly used example of meta-analysis method. For example when there are several different datasets, practitioners sometimes will first carry out a comprehensive study using one dataset, and only follow up with the SNPs that have the highest significance levels [@meta1]. Another example would be multi-trait analysis which contains a joint analysis of multiple related traits, in order to boost the statistical power [@MTAG]. In this note, we would like to consider some problems that practitioners may encounter when applying such procedures on the analysis of binary traits.
 
-With examples of Wald test, we presented the phenomenon that the same hypothesis test on different binary traits can have very different distributions of p-value under the alternative hypothesis, hence very different powers, even if the two traits have the same true SNP effect and are analyzed using the same dataset. The same conclusion will still hold if the practitioner uses likelihood ratio test or score test, and we choose to focus on Wald test in this note because of its computational convenience.
+With examples of Wald test, we presented the phenomenon that the same hypothesis test on different binary traits can have very different distributions of p-value under the alternative hypothesis, hence very different powers, even if the two traits have the same true SNP effect and are analyzed on the same set of individuals. The same phenomenon will also occur if the practitioner uses likelihood ratio test or score test, and we choose to use Wald test as the example in this note because of its computational convenience.
 
 In the next section, we will give a brief overview of Wald test for Generalized Linear Models, with a short explanation of the rationale behind the phenomenon we mentioned above. Then, we will follow with two simulation studies to illustrate how this phenomenon is affecting the analysis of binary trait, but not the analysis of continuous trait.
 
@@ -40,15 +40,15 @@ In the next section, we will give a brief overview of Wald test for Generalized 
 
 Assume the generalized linear model (glm) has the following form: $$\E(Y|X) = \mu = g^{-1}(\beta_0 + \beta_G G + \beta_E E) = g^{-1}(\eta),$$ where $g(.)$ is a specific link function connecting the linear predictor $\eta$ with the mean function of $Y$. The design matrix $X$ has rows $\{(1,G_i,E_i)_{i=1}^n\}$, where $n$ is the sample size and the first column of 1 is for the intercept $\beta_0$. For the simplicity of notations, we will use $\beta=(\beta_0,\beta_G,\beta_E)^T$ to denote both the vector of all regression parameters and the vector of their true values.
 
-In this case, the fisher information matrix at $\beta$ can be written as $$I_n(\beta) = X^TW(\beta) X,$$ where $W(\beta)$ is a diagonal matrix with each diagonal term depending on the value of $\beta$ unless $g$ is identity function. Specifically, the $i^{th}$ diagonal term of W can be computed as $$w_i=(\frac{\partial u_i}{\partial\eta_i})^2/\Var(Y_i|X).$$
+In this case, the fisher information matrix at $\beta$ can be written as $$I_n(\beta) = X^TW(\beta) X,$$ where $W(\beta)$ is a diagonal matrix with each diagonal term depending on the value of $\beta$ unless $g$ is identity function. More detailed examples will be provided in the next sections. Explicitly, the $i^{th}$ diagonal term of W can be computed as $$w_i=(\frac{\partial u_i}{\partial\eta_i})^2/\Var(Y_i|X).$$
 
-If the question of interest is to test the hypothesis $H_0: \beta_G=0$ using Wald test, the test statistic can be written as $$Z = \frac{\hat{\beta}_G}{\sqrt{I_n^{-1}(\hat{\beta})_{[3,3]}}},$$ where $I_n^{-1}(\hat{\beta})_{[3,3]}$ denotes the third diagonal term of the matrix $I_n^{-1}(\hat{\beta})$ and $\hat{\beta}$ is the MLE estimate. Under the null hypothesis, $Z^2$ asymptotically follows a Chi-Square distribution with 1 degree of freedom. 
+If the question of interest is to test the hypothesis $H_0: \beta_G=0$ using Wald test, the test statistic can be written as $$Z = \frac{\hat{\beta}_G}{\sqrt{I_n^{-1}(\hat{\beta})_{[2,2]}}},$$ where $I_n^{-1}(\hat{\beta})_{[2,2]}$ denotes the third diagonal term of the matrix $I_n^{-1}(\hat{\beta})$ and $\hat{\beta}$ is the MLE estimate. Under the null hypothesis, $Z^2$ asymptotically follows a Chi-Square distribution with 1 degree of freedom. 
 
-Under the alternative hypothesis that $\beta_G  \neq 0$, the non-centrality parameter of the squared Wald test statistics above can be computed as $$\frac{\beta_G^2}{I_n^{-1}(\beta)_{[3,3]}}.$$ Since $I_n^{-1}(\beta)_{[3,3]}$ will not solely depend on $\beta_G$ unless $g$ is identity. Therefore the power function of this Wald test will not only depend on $\beta_G$, but the whole vector $\beta$.
+Under the alternative hypothesis that $\beta_G  \neq 0$, the non-centrality parameter of the squared Wald test statistics above can be computed as $$\frac{\beta_G^2}{I_n^{-1}(\beta)_{[2,2]}}.$$ Since $I_n^{-1}(\beta)_{[2,2]}$ will not solely depend on $\beta_G$ unless $g$ is identity. Therefore the power function of this Wald test will not only depend on $\beta_G$, but the whole vector $\beta$.
 
-More specifically, let $d=-\frac{\beta_G}{\sqrt{I_n^{-1}(\beta)_{[3,3]}}}$, then the theoretical power of this Wald test at $\beta$ can be computed as $$1-\Phi(d+z_{a/2})+\Phi(d-z_{a/2}),$$ where $\Phi$ is the CDF of standard normal and $z_{a/2}$ is the $a/2$ quantile of standard normal.
+More specifically, let $d=-\frac{\beta_G}{\sqrt{I_n^{-1}(\beta)_{[2,2]}}}$, then the theoretical power of this Wald test at $\beta$ can be computed as $$1-\Phi(d+z_{a/2})+\Phi(d-z_{a/2}),$$ where $\Phi$ is the CDF of standard normal and $z_{a/2}$ is the $a/2$ quantile of standard normal.
 
-In summary, this means that if we utilize Poisson regression to analyze count traits (e.g. number of cancers) or Logistic/Probit regression to analyze binary traits (e.g. disease status), powers of Wald test from different studies can be dramatically different, even if the two studies have the same effect size (i.e. $|\beta_G|$) and the same set of covariates $\{G_{i},E_{i}\}_{i=1}^n$. The rationale behind this is actually the classical contrast between \textbf{statistical significance} measured by p-values and \textbf{practical significance} measured by the size of the effect $|\beta_G|$. In Wald test, p-values are determined by both the practical significance $|\beta_G|$ and the standard error $\sqrt{I_n^{-1}(\beta)_{[3,3]}}$. Since the standard errors of the MLE estimator will be different on the two studies, the conclusion drawn from statistical significance may be inconsistent with the practical significance of effects in the two studies. 
+In summary, this means that if we utilize Poisson regression to analyze count traits (e.g. number of cancers) or Logistic/Probit regression to analyze binary traits (e.g. disease status), powers of Wald test from different studies can be dramatically different, even if the two studies have the same effect size (i.e. $|\beta_G|$) and the same set of covariates $\{G_{i},E_{i}\}_{i=1}^n$. The rationale behind this is actually the classical contrast between \textbf{statistical significance} measured by p-values and \textbf{practical significance} measured by the size of the effect $|\beta_G|$. In Wald test, p-values are determined by both the practical significance $|\beta_G|$ and the standard error $\sqrt{I_n^{-1}(\beta)_{[2,2]}}$. Since the standard errors of the MLE estimator will be different on the two studies, the conclusion drawn from statistical significance may be inconsistent with the practical significance of effects in the two studies. 
 
 # Difference between continuous trait and binary trait:
 
@@ -58,25 +58,25 @@ where $\epsilon \sim N(0,\sigma)$.
 
 In this case, suppose the question of interest is testing $\beta_G=0$, the Wald test will have non-centrality parameter being $$\frac{\beta_G^2}{\sigma^2[X^TX]^{-1}_{[33]}}.$$
 
-Because the (inverse) information matrix $\sigma^2[X^TX]^{-1}$ only depends on the nuisance parameter $\sigma$, power of this test will not change as $\beta_0$ or $\beta_E$ change, as long as the nuisance parameter is the same. This implies, if a SNP $G$ has true effect $\beta_G$ being constant across two traits and assume $\sigma$ being the same, then the power of testing $\beta_G = 0$ will be constant across two traits as well. Therefore, the aggregation of evidences across traits will be straightforward and smaller p value can be associated with larger SNP effect.
+Because the (inverse) information matrix $\sigma^2[X^TX]^{-1}$ only depends on the nuisance parameter $\sigma$, power of this test will not change as $\beta_0$ or $\beta_E$ change, as long as the nuisance parameter is the same. This implies, if a SNP $G$ has true effect $\beta_G$ being constant across two traits and assume $\sigma$ being the same, then the power of testing $\beta_G = 0$ will be constant across two traits as well. Therefore, the aggregation of evidences across traits will be straightforward and smaller p-value can be associated with larger SNP effect.
 
 On the other hand, if the target is to combine evidence across several binary traits, the result will no longer be as straightforward. If traits are generated from the following logistic regression model:
 $$\text{logit}(\p(Y=1|X)) = \beta_0 + \beta_G G + \beta_E E,$$
-In this case, the corresponding non-centrality parameter of testing $\beta_G=0$ becomes $$\frac{\beta_G}{[X^TW_\beta X]^{-1}_{[33]}}.$$
+In this case, the corresponding non-centrality parameter of testing $\beta_G=0$ becomes $$\frac{\beta_G}{[X^TW_\beta X]^{-1}_{[2,2]}}.$$
 
 Since $g^{-1}(\eta)= \frac{\exp(\eta)}{1+\exp(\eta)}$ for logistic regression, we can compute the $i^{th}$ term of the diagonal matrix $W_\beta$ as $$[W_\beta]_{ii} = f(\eta_i)=\frac{\exp(-\eta_i)}{(1+\exp(-\eta_i))^2}.$$
-The function $f(.)$ represents the density function of standard logistic distribution, and the term $\eta_i$ is the i-th linear predictor. This implies the non-centrality parameter, hence the power will depend on every parameter in the model, not just on the parameter of interest $\beta_G$. 
+The function $f(.)$ represents the density function of standard logistic distribution, and the term $\eta_i$ is the $i^{th}$ linear predictor. This implies the non-centrality parameter, hence the power will depend on every parameter in the model, not just on the parameter of interest $\beta_G$. 
 
-To better understand the influence of $\beta_E$ on power of the Wald test for $\beta_G$. Note that $$\sigma_\eta^2:=\Var(\eta_i) = \beta_E^2\sigma_1^2+\beta_G^2\sigma_2^2 = c_1 +c_2\beta_E^2,$$ where we use $c_1$ and $c_2$ to denote constant terms that do not depend on $\beta_E$. Assume that the matrix $X^TX \approx \Sigma_X$, and $\eta_i\sim N(0,\sigma_\eta^2)$ (with density $\phi_\eta$), where $\Sigma_X$ is a matrix that does not depend on $\beta_E$. We will use the following approximation to the fisher information matrix:$$I = X^TW_\beta X \approx \mu_w \Sigma_X,$$ where $\mu_w = \E(w_i)$. Hence, we know that $$I^{-1}_{[2,2]} \propto \frac{1}{\mu_w}.$$
+To better understand the influence of $\beta_E$ on power of the Wald test for $\beta_G$. Note that $$\sigma_\eta^2:=\Var(\eta_i) = \beta_E^2\sigma_E^2+\beta_G^2\sigma_G^2 = c_1 +c_2\beta_E^2,$$ where we use $c_1$ and $c_2$ to denote constant terms that do not depend on $\beta_E$. Denote the matrix $X^TX$ as $\Sigma_X$, and $\eta_i\sim N(0,\sigma_\eta^2)$ (with density $\phi_\eta$), where $\Sigma_X$ is a matrix that does not depend on $\beta_E$. We will assume the fisher information matrix can be approximated as the following:$$I = X^TW_\beta X \approx \mu_w \Sigma_X,$$ where $\mu_w = \E(w_i)$. Hence, we know that $$I^{-1}_{[2,2]} \propto \frac{1}{\mu_w}.$$
 
 To compute $\mu_w$, we can approximate the standard logistic density $f(.)$ with density of $N(0,\frac{\pi}{\sqrt{3}})$ (denoted by $\phi_1$). Therefore, we have $$\mu_w = E(f(\eta_i)) \approx \int\phi_1(x)\phi_{\eta}(x)dx = \frac{1}{\sqrt{2\pi(\sigma_\eta^2+\frac{\pi^2}{3})}} \overset{approxi}{\propto} \frac{1}{|\beta_E|}.$$ Hence $I^{-1}_{[2,2]} \overset{approxi}{\propto} |\beta_E|$, which means that we expect the power of testing $\beta_G$ decreases as $|\beta_E|$ grows.
 
-An important consequence of this phenomenon is that, the magnitude of p values (statistical significance) will not reflect the magnitude of the SNP effects (practical significance), even if the two studies are carried out on the same set of individuals. For example, if a SNP has effect $\beta_G$ on both traits, it may show significance on only one trait because of the difference in the covariate effect such as age or sex.
+An important consequence of this phenomenon is that, the magnitude of p-values (statistical significance) will not reflect the magnitude of the SNP effects (practical significance), even if the two studies are carried out on the same set of individuals. Instead, the interpretation of this p-value should be the significance of $\beta_G$ relative to other covariate effects such as $\beta_E$. For example, if a SNP has effect $\beta_G$ on both traits, it may show significance on only one trait because of the difference in the covariate effect such as age or sex.
 
 
 # Simulation with Gaussian linear regression model:
 
-Assume a dataset of size $n=1000$ has been collected. The dataset contains the information of a continuous covariate E, a SNP G, and two continuous traits (A and B). Without loss of generality, assume this SNP follows hardy weinberg equilibrium (HWE) with minor allele frequency (MAF) $0.3$, and the covariate $E$ has been centered such that $E\sim N(0,3)$.
+Assume a dataset of size $n=1000$ has been collected. The dataset contains the information of a continuous covariate E, a SNP G, and two continuous traits (A and B). Without loss of generality, assume this SNP follows hardy weinberg equilibrium (HWE) with minor allele frequency (MAF) $0.3$, and the covariate $E$ has distribution such that $E\sim N(0,3)$.
 
 Furthermore, we assume that the generating models for each trait are the followings:
 $$\textbf{A}:Y = -0.5 + 0.3G + 0.8E + \epsilon,$$
@@ -183,13 +183,13 @@ Based on the $2000$ resampling results, the empirical powers are basically the s
 
 
 # Simulation with logistic regression model:
-Assume the same setting as before, except now the two traits of interest are both binary instead of continuous. Assume their generating models are the followings:
+Assume the same setting as before, except now the two traits of interest are both binary instead of continuous. Let their generating models be the followings:
 $$\textbf{A}:\text{logit}(\p(Y=1|G,E)) = -0.5 + 0.3G + 0.8E,$$
 $$\textbf{B}: \text{logit}(\p(Y=1|G,E)) = -0.5 + 0.3G + 0.1E.$$
 
-All the regression parameters are the same as in the example of continuous traits. A key difference between the generating model of binary traits with the one of continuous traits is that there is no nuisance parameter $\sigma$, which already implies that there might be a difference in their inferential results. All the studies are still carried out on the same set of individuals.
+All the regression parameters are the same as in the example of continuous traits. A key difference between the generating model of binary traits with the one of continuous traits is that there is no nuisance parameter $\sigma$, which already implies that there might be a difference in the interpretation of their inferential results. Both studies are still carried out on the same set of individuals.
 
-In this example, we consider the sampling design to be prospective for simplicity. The intercept parameter is selected to make sure the prevalence of the trait is high enough. The explicit case-control ratio for each trait is displayed at below: 
+In this example, we consider the sampling design to be prospective for simplicity. The intercept parameter is selected to make sure the case-control ratio is relatively balanced. The observed case-control ratio for each trait is displayed at below: 
 
 ```{r simulatedData}
 ### Simulated the common E and G
@@ -300,7 +300,7 @@ Power_B <- 1- pnorm(delta - qnorm(alpha/2)) + pnorm(delta + qnorm(alpha/2))
 Power_B
 ```
 
-Based on the results above, we know in this simulation study, the power of Wald test will be $0.619$ for the trait A, and $0.861$ for the trait B. Note that Wald test on trait B has quite larger power compared to on trait A, despite the fact that the two samples are generated with same $\beta_G = 0.3$ and generated by the same set of $\{G_i,E_i\}_n$. This suggests the p-values of Wald test may have very different distributions on the two traits. We can double check that our theoretical powers for both tests are correct using empirical powers:
+Based on the results above, we know in this simulation study, the power of Wald test will be $0.619$ for the trait A, and $0.861$ for the trait B. Note that Wald test on trait B has quite larger power compared to on trait A, despite the fact that the two samples are generated with same $\beta_G = 0.3$ and generated by the same set of $\{G_i,E_i\}_{i=1}^n$. This suggests the p-values of Wald test may have very different distributions on the two traits. We can double check that our theoretical powers for both tests are correct using empirical powers:
 
 To compute the empirical powers, we re-simulated each type of binary trait for $K = 2000$ times, and compute the $2000$ p-values in each trait:
 ```{r Empirical Powers}
@@ -341,7 +341,9 @@ pcomp <- tibble(P = c(p1,p2), trait = c(rep("A",2000),rep("B",2000)))
 pcomp %>% ggplot(aes(x = P, fill = trait)) + geom_histogram(bins = 20, alpha=0.5, position="identity")
 ```
 
-Based on the figure above, we can conclude that the distribution of p values in trait B is stochastically smaller than the distribution in trait A, even if their underlying $\beta_G$ are both $0.3$. Therefore, it shows that the magnitudes of p-values of different studies are not directly comparable, unless the generalized linear regression model being used is the ordinary linear regression model with $g$ being identity function.
+Based on the figure above, we can conclude that the distribution of p-values in trait B is stochastically smaller than the distribution in trait A, even if their underlying $\beta_G$ are both $0.3$. This is within our expectation because we know that the \textbf{relative} effect size ($\frac{|\beta_G|}{|\beta_E|}$) is larger for trait B.
+
+Therefore, it shows that the magnitudes of p-values of different studies are not directly comparable, unless the generalized linear regression model being used is the ordinary linear regression model with $g$ being identity function.
 
 
 \clearpage
